fix: kube permission rbac name

--- a/redhat-developer-hub/redhat-developer-hub-prereqs/values.yaml
+++ b/redhat-developer-hub/redhat-developer-hub-prereqs/values.yaml
@@ -43,7 +43,7 @@ rbacPolicy:
   - "p, role:default/plugins, argocd.view.read, read, allow"
   - "p, role:default/plugins, kubernetes.proxy, use, allow"
   - "p, role:default/plugins, kubernetes.clusters.read, read, allow"
-  - "p, role:default/plugins, kubernetes.clusters.resources, read, allow"
+  - "p, role:default/plugins, kubernetes.resources.read, read, allow"
   - "p, role:default/plugins, adoption-insights.events.read, read, allow"
 
   - "p, role:default/workflowUser, orchestrator.workflow.create-ocp-namespace-swt, read, allow"
